<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="32dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="32dp"
                android:ems="10"
                android:hint="@string/description"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextName" />

            <EditText
                android:id="@+id/editTextFeeling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="32dp"
                android:ems="10"
                android:hint="@string/feeling"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextDescription" />

            <ImageView
                android:id="@+id/imageViewPhotoPicker"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="32dp"
                android:contentDescription="@string/photo_picker_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextFeeling"
                app:srcCompat="@drawable/ic_image_search" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_gravity="bottom"
        android:paddingHorizontal="8dp"
        android:paddingVertical="8dp">
        <Button
            android:id="@+id/buttonNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>