<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_location_navigation"
    app:startDestination="@id/fragmentAddLocation">

    <fragment
        android:id="@+id/fragmentAddLocation"
        android:name="com.aktepetugce.favoriteplace.ui.addlocation.AddLocationFragment"
        android:label="@string/add_location_title"
        tools:layout="@layout/fragment_add_location" >
        <action
            android:id="@+id/action_fragmentAddLocation_to_fragmentMaps"
            app:destination="@id/fragmentMaps" />
    </fragment>

    <fragment
        android:id="@+id/fragmentMaps"
        android:name="com.aktepetugce.favoriteplace.ui.map.MapsFragment"
        android:label="@string/set_location_title"
        tools:layout="@layout/fragment_maps">
        <argument
            android:name="place"
            app:argType="com.aktepetugce.favoriteplace.domain.model.UIPlace"
            app:nullable="true" />
    </fragment>
</navigation>