...
    <fragment
        android:id="@+id/fragmentSplash"
        android:name="com.aktepetugce.favoriteplace.login.ui.splash.SplashFragment"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splashFragment_to_fragmentLogin"
            app:destination="@id/fragmentLogin"
            app:popUpTo="@id/fragmentSplash"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/fragmentLogin"
        android:name="com.aktepetugce.favoriteplace.login.ui.login.LoginFragment"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_fragmentLogin_to_fragmentRegister"
            app:destination="@id/fragmentRegister"
            app:popUpTo="@id/fragmentLogin"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_fragmentLogin_to_fragmentForgotPassword"
            app:destination="@id/fragmentForgotPassword" />
        <deepLink
...
